--- a/honggfuzz/Makefile
+++ b/honggfuzz/Makefile
@@ -21,9 +21,7 @@
 #
 
 # Common for all architectures
-define filter-out
-$(foreach v,$(2),$(if $(findstring $(1),$(v)),,$(v)))
-endef
+
 
 
 CC ?= gcc
@@ -34,7 +32,7 @@ HFUZZ_CC_SRCS := hfuzz_cc/hfuzz-cc.c
 COMMON_CFLAGS := -std=c11 -I/usr/local/include -D_GNU_SOURCE -Wall -Wextra -Werror -Wno-format-truncation -Wno-override-init -I.
 COMMON_LDFLAGS := -pthread -L/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib -lm
 COMMON_SRCS := $(sort $(wildcard *.c))
-SCTOOLS_SRCS := $(sort (filter-out side-channels/pht_PP_api.c, $(wildcard side-channels/*.c)))
+SCTOOLS_SRCS := $(sort $(wildcard side-channels/*.c))
 
 CFLAGS ?= -O3 -mtune=native #-funroll-loops
 LDFLAGS ?=
