now creating histogram

--- a/honggfuzz/Makefile
+++ b/honggfuzz/Makefile
@@ -34,7 +34,7 @@ COMMON_LDFLAGS := -pthread -L/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk
 COMMON_SRCS := $(sort $(wildcard *.c))
 SCTOOLS_SRCS := $(sort $(wildcard side-channels/*.c))
 
-CFLAGS ?= -O3 -mtune=native #-funroll-loops
+CFLAGS ?= -g -O3 -mtune=native #-funroll-loops
 LDFLAGS ?=
 LIBS_CFLAGS ?= -fPIC -fno-stack-protector -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0  # fortify-source intercepts some functions, so we disable it for libraries
 GREP_COLOR ?=
