--- a/pht_prime_probe_toy/Makefile
+++ b/pht_prime_probe_toy/Makefile
@@ -3,7 +3,7 @@ CFLAGS=-I.
 
 
 poc_v1: 
-	gcc -O0 opcode_test.c pht_PP_api.c pht_PP_api.h util.h randomize_pht.o -o phtTest -static
+	gcc -O0 opcode_test.c pht_PP_api.c util.c pht_PP_api.h util.h randomize_pht.o -o phtTest -static
 
 all: poc_v1
 v1: poc_v1
